load("@gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@rules_python//python:defs.bzl", "py_runtime_pair")
load("@rules_python_gazelle_plugin//:def.bzl", "GAZELLE_PYTHON_RUNTIME_DEPS")

gazelle(
    name = "gazelle",
    command = "update",
    data = GAZELLE_PYTHON_RUNTIME_DEPS,
    gazelle = ":gazelle_binary",
    prefix = "github.com/idlebot/monorepo",
)

gazelle_binary(
    name = "gazelle_binary",
    languages = [
        "@gazelle//language/go",
        "@rules_python_gazelle_plugin//python",
    ],
    visibility = ["//visibility:public"],
)

py_runtime_pair(
    name = "python_runtime_pair",
    py3_runtime = "@python_interpreter//:python_runtime",
)
