load("@gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("@rules_python_gazelle_plugin//:def.bzl", "GAZELLE_PYTHON_RUNTIME_DEPS")

# gazelle:exclude .venv

gazelle(
    name = "gazelle",
    command = "update",
    data = GAZELLE_PYTHON_RUNTIME_DEPS,
    gazelle = ":gazelle_binary",
    prefix = "github.com/idlebot/monorepo",
)

gazelle_binary(
    name = "gazelle_binary",
    languages = [
        "@gazelle//language/go",
        "@rules_python_gazelle_plugin//python",
    ],
    visibility = ["//visibility:public"],
)

exports_files(
    ["requirements_lock.txt"],
    visibility = ["//visibility:public"],
)

# This rule adds a convenient way to update the requirements file.
compile_pip_requirements(
    name = "requirements",
    src = "requirements.txt",
    requirements_txt = "requirements_lock.txt",
)
