load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_library",
)

csharp_library(
    name = "client",
    srcs = [
        "Goodbye.g.cs",
        "GoodbyeClient.g.cs",
        "GoodbyeGrpc.g.cs",
        "Greeter.g.cs",
        "GreeterClient.g.cs",
        "GreeterGrpc.g.cs",
        "PackageApiMetadata.g.cs",
        "ServiceCollectionExtensions.g.cs",
    ],
    private_deps = [
        "@paket.main//google.api.commonprotos",
        "@paket.main//google.api.gax",
        "@paket.main//google.api.gax.grpc",
        "@paket.main//google.protobuf",
        "@paket.main//grpc.core",
        "@paket.main//grpc.core.api",
        "@paket.main//microsoft.extensions.dependencyinjection.abstractions",
        "@paket.main//microsoft.extensions.logging.abstractions",
        "@paket.main//microsoft.netcore.app.ref",
    ],
    target_frameworks = ["net7.0"],
    visibility = ["//visibility:public"],
    deps = [
    ],
)
