load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_binary",
)

# bazel run //hellodotnet:hello
csharp_binary(
    name = "hello",
    srcs = ["hello.cs"],
    private_deps = [
        "@paket.main//microsoft.netcore.app.ref",
    ],
    target_frameworks = ["net7.0"],
    deps = [
        #  "//hellogrpc/greeter/v1:v1_go_gapic",
    ],
)
