load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "hellogrpc_lib",
    srcs = ["main.go"],
    importpath = "github.com/idlebot/monorepo/hellogrpc",
    visibility = ["//visibility:private"],
    deps = [
        "//dictionary/v1:dictionary",
        "//hellogrpc/greeter/v1:v1_go_proto",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "hellogrpc",
    embed = [":hellogrpc_lib"],
    visibility = ["//visibility:public"],
)
