load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "helloworld_lib",
    srcs = ["main.go"],
    importpath = "github.com/idlebot/monorepo/helloworld",
    visibility = ["//visibility:public"],
    deps = [
        "//hellogrpc/greeter/v1:v1_go_gapic",  # keep
        "//hellogrpc/greeter/v1:v1_go_proto",
        "@org_golang_google_api//option:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "helloworld",
    embed = [":helloworld_lib"],
    visibility = ["//visibility:public"],
)
