load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "annotations_proto",
    srcs = ["ui.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:descriptor_proto"],
)

go_proto_library(
    name = "annotations_go_proto",
    importpath = "github.com/idlebot/monorepo/annotations/v1",
    proto = ":annotations_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "annotations",
    embed = [":annotations_go_proto"],
    importpath = "github.com/idlebot/monorepo/annotations/v1",
    visibility = ["//visibility:public"],
)
