load("@golink//proto:proto.bzl", "go_proto_link")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "v1_proto",
    srcs = ["greeter.proto"],
    visibility = ["//visibility:public"],
    deps = ["@go_googleapis//google/api:annotations_proto"],
)

go_proto_library(
    name = "v1_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/idlebot/monorepo/hellogrpc/greeter/v1",
    proto = ":v1_proto",
    visibility = ["//visibility:public"],
    deps = ["@go_googleapis//google/api:annotations_go_proto"],
)

go_library(
    name = "greeter",
    embed = [":v1_go_proto"],
    importpath = "github.com/idlebot/monorepo/hellogrpc/greeter/v1",
    visibility = ["//visibility:public"],
)

go_proto_link(
    name = "v1_go_proto_link",
    dep = ":v1_go_proto",
    version = "v1",
)
