load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "console",
    srcs = [
        "color.go",
        "error.go",
        "info.go",
        "print_color.go",
        "prompt.go",
        "table.go",
        "tool_name.go",
        "verbose.go",
    ],
    importpath = "github.com/idlebot/monorepo/monorepo/internal/console",
    visibility = ["//monorepo:__subpackages__"],
    deps = [
        "//monorepo/global",
        "//monorepo/internal/slices",
    ],
)
