load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_binary(
    name = "main",
    srcs = ["main.py"],
    imports = [".."],
    visibility = ["//src/python:__subpackages__"],
    deps = [":helloworld"],
)

py_library(
    name = "helloworld",
    srcs = [
        "__init__.py",
        "main.py",
        "req.py",
    ],
    imports = [".."],
    visibility = ["//src/python:__subpackages__"],
    deps = ["@pip//requests"],
)
