load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "asdf",
    srcs = ["installer.go"],
    importpath = "github.com/idlebot/monorepo/monorepo/internal/tools/asdf",
    visibility = ["//monorepo:__subpackages__"],
    deps = [
        "//monorepo/internal/shell",
        "//monorepo/internal/tools/installer",
    ],
)
